# pipeline-factory

./: .gitignore  LICENSE  Makefile  READEME.rst  README.rst  pyproject.toml
example_app/: Makefile  main.py  requirements.txt
example_app/action_clients/: text_generate_gemini.py
example_app/pipelines/: example_pipeline_1.py  example_pipeline_2.py  types.py
src/pipeline_factory/: _version.py  config.py  utils.py
src/pipeline_factory/db/: __init__.py  db.py  sqlite.py  sqlite_config.py
src/pipeline_factory/pipeline/: __init__.py  controlers.py  models.py  pipeline.py  tasks.py
src/pipeline_factory/server/: main.py  tasks.py  worker.py
src/pipeline_factory/server/templates/: list_files.html
